--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "antd": "^4.16.13",
     "next": "11.1.2",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1",
+    "remark-gfm": "^3.0.0",
+    "sass": "^1.43.2"
   },
   "devDependencies": {
     "@types/react": "17.0.29",
