--- a/package.json
+++ b/package.json
@@ -9,15 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
     "antd": "^4.16.13",
+    "autoprefixer": "^10.3.7",
+    "axios": "^0.23.0",
+    "date-fns": "^2.25.0",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
+    "postcss": "^8.3.11",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
+    "rehype-document": "^6.0.0",
+    "rehype-format": "^4.0.0",
+    "rehype-slug": "^5.0.0",
+    "rehype-stringify": "^9.0.2",
+    "remark": "^14.0.1",
     "remark-gfm": "^3.0.0",
-    "sass": "^1.43.2"
+    "remark-html": "^15.0.0",
+    "remark-toc": "^8.0.0",
+    "sass": "^1.43.2",
+    "tailwindcss": "^2.2.17",
+    "to-vfile": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "17.0.29",
